Fixup spacing below tables

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -100,6 +100,7 @@ body, p, ol, ul, td {
   background-color: #cfd1cf;
   padding: 10px 10px 10px 10px;
   border-radius: 10px;
+  margin-bottom: 10px;
 }
 
 pre {
